@@ -1,16 +1,24 @@
 package com.aigo.speech.jobposting.service;
 
-import java.net.URL;
+import java.net.URI;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.aigo.speech.jobposting.crawler.CrawlerFactory;
-import com.aigo.speech.jobposting.crawler.JobPostingCrawler;
-import com.aigo.speech.jobposting.dto.JobPostingAnalyzeResponse;
+import com.aigo.speech.jobposting.dto.JobPostingDetailResponse;
+import com.aigo.speech.jobposting.dto.JobPostingSummaryResponse;
+import com.aigo.speech.jobposting.dto.JobPostingSubmitResponse;
+import com.aigo.speech.jobposting.entity.JobPosting;
 import com.aigo.speech.jobposting.exception.InvalidUrlException;
-import com.aigo.speech.jobposting.exception.JobPostingCrawlException;
-import com.aigo.speech.jobposting.parser.JobPostingParser;
+import com.aigo.speech.jobposting.exception.JobPostingNotFoundException;
+import com.aigo.speech.jobposting.repository.JobPostingRepository;
+import com.aigo.speech.user.entity.User;
+import com.aigo.speech.user.repository.UserRepository;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -20,38 +28,75 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor
 public class JobPostingAnalyzeService {
 
+	private final JobPostingRepository jobPostingRepository;
+	private final UserRepository userRepository;
 	private final CrawlerFactory crawlerFactory;
-	private final JobPostingParser jobPostingParser;
+	private final ApplicationEventPublisher eventPublisher;
 
-	public JobPostingAnalyzeResponse analyze (String url) {
-		log.info("[JobPosting] 분석 시작. url={}", url);
-
+	/**
+	 * URL 제출 → 즉시 uuid 반환. 동일 URL 중복 시 기존 결과 반환. 신규 시 PENDING 저장 후 비동기 분석 트리거.
+	 */
+	@Transactional
+	public JobPostingSubmitResponse submit(String url, UUID userUuid) {
 		validateUrl(url);
+		crawlerFactory.getCrawler(url); // 지원 사이트 검증 (UnsupportedSiteException)
 
-		JobPostingCrawler crawler = crawlerFactory.getCrawler(url);
-		String rawText = crawler.crawl(url);
+		User user = findUser(userUuid);
 
-		if (!StringUtils.hasText(rawText)) {
-			throw new JobPostingCrawlException("수집된 텍스트가 없습니다.");
+		Optional<JobPosting> existing = jobPostingRepository.findByUserAndUrl(user, url);
+		if (existing.isPresent()) {
+			log.info("[JobPosting] 중복 URL - 기존 결과 반환. uuid={}", existing.get().getUuid());
+			return JobPostingSubmitResponse.from(existing.get());
 		}
 
-		log.info("[JobPosting] 크롤링 완료. textLength={}", rawText.length());
+		JobPosting jobPosting = jobPostingRepository.save(JobPosting.pending(user, url));
+		log.info("[JobPosting] 신규 등록. uuid={}, url={}", jobPosting.getUuid(), url);
 
-		JobPostingAnalyzeResponse result = jobPostingParser.parse(rawText);
+		// 트랜잭션 커밋 후 비동기 분석 실행 (@TransactionalEventListener(AFTER_COMMIT))
+		eventPublisher.publishEvent(new JobPostingSubmittedEvent(jobPosting.getId()));
 
-		log.info(
-			"[JobPosting] 파싱 완료. company={}, position={}",
-			result.companyName(), result.position()
-		);
-
-		return result;
+		return JobPostingSubmitResponse.from(jobPosting);
 	}
 
-	private void validateUrl (String url) {
+	@Transactional(readOnly = true)
+	public JobPostingDetailResponse getDetail(UUID uuid, UUID userUuid) {
+		User user = findUser(userUuid);
+		JobPosting jp = jobPostingRepository.findByUuidAndUser(uuid, user)
+			.orElseThrow(() -> new JobPostingNotFoundException("채용공고를 찾을 수 없습니다."));
+		return JobPostingDetailResponse.from(jp);
+	}
+
+	@Transactional(readOnly = true)
+	public List<JobPostingSummaryResponse> getMyList(UUID userUuid) {
+		User user = findUser(userUuid);
+		return jobPostingRepository.findAllByUserOrderByCreatedAtDesc(user).stream()
+			.map(JobPostingSummaryResponse::from)
+			.toList();
+	}
+
+	@Transactional
+	public void delete(UUID uuid, UUID userUuid) {
+		User user = findUser(userUuid);
+		JobPosting jp = jobPostingRepository.findByUuidAndUser(uuid, user)
+			.orElseThrow(() -> new JobPostingNotFoundException("채용공고를 찾을 수 없습니다."));
+		jobPostingRepository.delete(jp);
+		log.info("[JobPosting] 삭제 완료. uuid={}", uuid);
+	}
+
+	private User findUser(UUID userUuid) {
+		return userRepository.findByUuid(userUuid)
+			.orElseThrow(() -> new IllegalStateException("사용자를 찾을 수 없습니다: " + userUuid));
+	}
+
+	private void validateUrl(String url) {
 		try {
-			new URL(url).toURI();
-		} catch (Exception e) {
-			throw new InvalidUrlException("유효하지 않은 URL 형식입니다: " + url);
+			URI uri = URI.create(url);
+			String scheme = uri.getScheme();
+			if (scheme == null || (!scheme.equals("http") && !scheme.equals("https"))) {
+				throw new InvalidUrlException("올바른 URL 형식이 아닙니다: " + url);
+			}
+		} catch (IllegalArgumentException e) {
+			throw new InvalidUrlException("올바른 URL 형식이 아닙니다: " + url);
 		}
 	}
 }
